[package]
name = "sonar-tantivy"
version = "0.2.14"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
repository = "https://github.com/arso-project/sonar-tantivy"

[[bin]]
name = "sonar-tantivy"
path = "src-rust/main.rs"

[dependencies]
tantivy = { git = "https://github.com/tantivy-search/tantivy.git", rev = "67f53289ef28d7d263775838fb282fc2d622cfec" }
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde = { version = "^1.0", features = ["derive"] }
toshi-query = { git = "https://github.com/arso-project/Toshi.git", branch = "toshi-query-tantivymaster" }
log = "^0.4"
uuid = "^0.7"
failure = "^0.1"
varinteger = "^1.0"
once_cell = "^0.2"

[dev-dependencies]
tempdir = "^0.3"
